--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 clap = "~2.2.6"
 term = "~0.4.4"
 tempfile = "~2.1.4"
-toml = "~0.1.30"
+toml = "~0.4.5"
 semver = "~0.2.3"
-rustc-serialize = "~0.3.19"
+serde = "~1.0.27"
+serde_derive = "~1.0.27"
