--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 
 [dependencies]
 clap = "~2.2.6"
-term = "~0.4.4"
+term = "0.4.6"
 tempfile = "~2.1.4"
 toml = "~0.4.5"
 semver = "~0.2.3"
