--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 [dependencies]
 clap = "~2.2.6"
 term = "0.4.6"
-tempfile = "~2.1.4"
+tempfile = "2.2.0"
 toml = "~0.4.5"
 semver = "~0.2.3"
 serde = "~1.0.27"
