--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ clap = "~2.2.6"
 term = "0.4.6"
 tempfile = "2.2.0"
 toml = "~0.4.5"
-semver = "~0.2.3"
+semver = "0.9.0"
 serde = "~1.0.27"
 serde_derive = "~1.0.27"
