--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ repository = "https://github.com/dan-t/rusty-release"
 readme = "README.md"
 
 [dependencies]
-clap = "2.29.0"
-term = "0.4.6"
-tempfile = "2.2.0"
-toml = "~0.4.5"
+clap = "2.32.0"
+term = "0.5.1"
+tempfile = "3.0.6"
+toml = "0.4.10"
 semver = "0.9.0"
-serde = "~1.0.27"
-serde_derive = "~1.0.27"
+serde = "1.0.87"
+serde_derive = "1.0.87"
